--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -274,6 +274,15 @@
                     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
                     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+
+                    <!-- DataTables CSS -->
+                    <link rel="stylesheet" type="text/css"
+                        href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+
+                    <!-- DataTables JS -->
+                    <script type="text/javascript" charset="utf8"
+                        src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+
                     <!-- Include Bootstrap CSS -->
                     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
                         rel="stylesheet">
@@ -339,6 +348,14 @@
         </div>
     </div>
     <script>
+
+        $(document).ready(function () {
+            $('#example').DataTable({
+                destroy: true, // Destroy the existing DataTable, if any
+                ordering: false // or any other options you need
+            });
+        });
+
         function OfferDelete(productId) {
             Swal.fire({
                 title: "Delete Offer",
